<resources>
    <string name="app_name">Quoits Counter (Beta)</string>
    <string name="team_name_0">Good guys</string>
    <string name="team_name_1">Bad guys</string>
    <!--<string name="scoreSummaryFormat">%1$s: %2$d point(s)</string>-->
    <string name="scoreSummaryFormat">%1$d</string>
    <string name="applyScoreFormat">%1$d point(s) will be applied to \'%2$s\'</string>
    <string name="noScoreFormat">No blood!</string>
    <string name="gamePoint">GAME POINT!</string>
    <string name="deucePoint">Remember, you must win by two.</string>
    <string name="add_one_label">1 POINT</string>
    <string name="add_ringer_label">RINGER!</string>
    <string name="round_summary_text">Round: %1$d</string>
    <string name="title_activity_splash">Quoits Counter</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset_label">Reset game</string>
    <string name="action_reset_confirmation">Game has been reset.</string>
    <string name="action_reset_prefs_label">Reset preferences</string>
    <string name="action_reset_prefs_confirmation">Your preferences have been reset.</string>
    <string name="action_decrement_0_label">Subtract 1/Good guys</string>
    <string name="action_decrement_1_label">Subtract 1/Bad guys</string>
    <string name="action_end_label">End game</string>
    <string name="title_activity_edit_teams">Quoits Counter: Set team names</string>
    <string name="edit_team_0_label">Team 1 name:</string>
    <string name="edit_team_1_label">Team 2 name:</string>
    <string name="option_show_edit_teams_label">Show this screen on launch</string>
    <string name="edit_tems_done_label">Continue</string>
    <string name="settings_file_name">QCSettings.bin</string>
    <string name="title_activity_adjust_score">Adjust Score</string>
    <string name="modify_score_label_format">Adjust score for team \'%1$s\'</string>
    <string name="edit_team_name_hint">(Enter team name)</string>
    <string name="title_activity_main_activity2">Quoits Counter: Game On!</string>
    <string name="hello_world">Hello world!</string>
</resources>
