<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!--   <item android:id="@+id/action_settings" android:title="@string/action_settings"
           android:orderInCategory="100" app:showAsAction="never" />-->
    <item
        android:id="@+id/action_clear_preferences"
        android:icon="@drawable/ic_settings_backup_restore_white_24dp"
        android:title="@string/action_reset_prefs_label"
        android:layout_gravity="left"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset_game"
        android:icon="@drawable/ic_undo_white_24dp"
        android:title="@string/action_reset_label"
        android:layout_gravity="left"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_end_game"
        android:icon="@drawable/ic_clear_white_24dp"
        android:title="@string/action_end_label"
        android:layout_gravity="left"
        app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/action_decrement_0"-->
        <!--android:icon="@drawable/ic_minus_24"-->
        <!--android:title="@string/action_decrement_0_label"-->
        <!--android:layout_gravity="left"-->
        <!--app:showAsAction="never" />-->
    <!--<item-->
        <!--android:id="@+id/action_decrement_1"-->
        <!--android:icon="@drawable/ic_minus_24"-->
        <!--android:title="@string/action_decrement_1_label"-->
        <!--android:layout_gravity="left"-->
        <!--app:showAsAction="never" />-->
</menu>
