<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.integral_applications.products.quoitscounterfree.EditTeamsActivity"
        >

    <TextView   android:id="@+id/lblTeam0"
                android:text="@string/edit_team_0_label"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                />

    <FrameLayout android:id="@+id/editGroup0"
        android:layout_below="@id/lblTeam0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:padding="5dp">

        <EditText   android:id="@+id/editTeam0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_team_name_hint"
            android:padding="5dip"
            android:inputType="textPersonName"
            android:layout_gravity="left|center_vertical"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            style="@style/Base.TextAppearance.AppCompat.Menu"
            />

        <Button
            android:id="@+id/clearTeam0"
            android:layout_width="30dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:drawableRight="@drawable/ic_clear_black_24dp"
            android:background="@android:color/transparent"/>

    </FrameLayout>


    <TextView   android:id="@+id/lblTeam1"
                android:layout_below="@id/editGroup0"
                android:text="@string/edit_team_1_label"
                android:paddingTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                />

    <FrameLayout android:id="@+id/editGroup1"
        android:layout_below="@id/lblTeam1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:padding="5dp">

        <EditText   android:id="@+id/editTeam1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_team_name_hint"
            android:padding="5dip"
            android:layout_gravity="left|center_vertical"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            style="@style/Base.TextAppearance.AppCompat.Menu"
            />

        <Button
            android:id="@+id/clearTeam1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginBottom="5dp"
            android:drawableRight="@drawable/ic_clear_black_24dp"
            android:background="@android:color/transparent"/>

    </FrameLayout>


    <Button     android:id="@+id/btnCommit"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_tems_done_label" />

    <CheckBox   android:id="@+id/editShowTeamNames"
                android:layout_above="@id/btnCommit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/option_show_edit_teams_label"
                android:editable="false"
        />

</RelativeLayout>
